task5/tests/group/output/test2.out
lli: <stdin>:26:19: error: '%1' defined with type 'i8' but expected 'i32'
%t0 = add i32 %0, %1
                  ^
